# kindle-quotes

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
kindle_quotes/: __main__.py
tests/: test_quotes.py
tests/files/: test_clippings.txt
