[project]
name = "kindle-quotes"
version = "0.1.0"
description = ""
authors = [
    {name = "Milan Dufek",email = "dufek.milan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"
pytest = "^8.3.4"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.pylint]
disable = [
    "C0103",
    "C0114",
    "C0114",
    "C0115",
    "C0116",
    "W0105",
    "W0602",
    "W0603",
    "W0622",
    "W0718",
    "W1203",
    "W1514"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
